2004-10-14  Gerhard Jaeger <gerhard@gjaeger.de>

	* sanei/sanei_thread.c: Added missing pthread_detach() so the
	  thread resources could be reused again.

2004-10-13  Ullrich Sigwanz <usigwanz@freesurf.ch>

        * backend/niash.c: Proper resource handling in sane_cancel.

2004-10-12  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed warning condition.
	* backend/plustek-usbhw.c: Cleanup.

2004-10-12 Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation.
	* Added a "translators" section in AUTHORS

2004-10-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 config.guess config.sub configure ltmain.sh: Update
	  to libtool 1.5.10.
	* doc/descriptions/unsupported.desc: Added link to
	  Microtek Filmscan 35. 
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_high.c
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES:
	  Fixed typos. Added Packard Bell Diamond 2450 to .conf and
	  changed status to "good". Avoid error message when closing
	  scanner. Don't print max_white warning when debugging is not
	  enabled.
	* po/sane-backends.bg.po po/sane-backends.cs.po po/sane-backends.da.po
	  po/sane-backends.de.po po/sane-backends.es.po po/sane-backends.fi.po
	  po/sane-backends.fr.po po/sane-backends.it.po po/sane-backends.nl.po
	  po/sane-backends.no.po po/sane-backends.pt.po po/sane-backends.ru.po
	  po/sane-backends.sv.po: Recreated. Fixed
	  some fuzzy texts and added some translations to .de.po.
	* tools/check-usb-chip.c: Workaround for GT6816 detection problem
	  on BSDs.

2004-10-11  Oliver Schirrmeister (oschirr@abm.de)

        * backend/fujitsu.c: bugfix: 3091 did not work (15.12.2003)
          M4099 supported (bw only)
	  enables brightness 

2004-10-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/test.c: Fixed typo.
	* README.solaris: Added details on building SANE on Solaris/x86
	  (from Tomasz Orlinski <tomasz.orlinski@wp.pl>).
